todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  labels:
    app: todo
    component: web
spec:
  type: LoadBalancer
  selector:
    component: web
  ports:
    - port: 3000
